crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__expression__binary_expr.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/expression/binary_expr.qasm
expect-sema: Panic
--- sema ---
ok: false
panicked: true
panic: true
errors: 0
--- asg ---
(no asg)
