crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__expression__built_in_call.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/expression/built_in_call.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..177: 
int[32](10);
sin(π);
arcsin(π);
cos(π);
arccos(π);
tan(π);
arctan(π);
exp(π);
ln(π);
sqrt(π);
rotl(π);
rotr(π);
popcount(π);
sizeof(x);
sizeof(x, 0);
sizeof(x, 1);

EXPR_STMT@1..13: int[32](10);
CAST_EXPRESSION@1..12: int[32](10)
SCALAR_TYPE@1..8: int[32]
DESIGNATOR@4..8: [32]
LITERAL@5..7: 32
LITERAL@9..11: 10
EXPR_STMT@14..22: sin(π);
CALL_EXPR@14..21: sin(π)
IDENTIFIER@14..17: sin
ARG_LIST@17..21: (π)
EXPRESSION_LIST@17..21: (π)
IDENTIFIER@18..20: π
EXPR_STMT@23..34: arcsin(π);
CALL_EXPR@23..33: arcsin(π)
IDENTIFIER@23..29: arcsin
ARG_LIST@29..33: (π)
EXPRESSION_LIST@29..33: (π)
IDENTIFIER@30..32: π
EXPR_STMT@35..43: cos(π);
CALL_EXPR@35..42: cos(π)
IDENTIFIER@35..38: cos
ARG_LIST@38..42: (π)
EXPRESSION_LIST@38..42: (π)
IDENTIFIER@39..41: π
EXPR_STMT@44..55: arccos(π);
CALL_EXPR@44..54: arccos(π)
IDENTIFIER@44..50: arccos
ARG_LIST@50..54: (π)
EXPRESSION_LIST@50..54: (π)
IDENTIFIER@51..53: π
EXPR_STMT@56..64: tan(π);
CALL_EXPR@56..63: tan(π)
IDENTIFIER@56..59: tan
ARG_LIST@59..63: (π)
EXPRESSION_LIST@59..63: (π)
IDENTIFIER@60..62: π
EXPR_STMT@65..76: arctan(π);
CALL_EXPR@65..75: arctan(π)
IDENTIFIER@65..71: arctan
ARG_LIST@71..75: (π)
EXPRESSION_LIST@71..75: (π)
IDENTIFIER@72..74: π
EXPR_STMT@77..85: exp(π);
CALL_EXPR@77..84: exp(π)
IDENTIFIER@77..80: exp
ARG_LIST@80..84: (π)
EXPRESSION_LIST@80..84: (π)
IDENTIFIER@81..83: π
EXPR_STMT@86..93: ln(π);
CALL_EXPR@86..92: ln(π)
IDENTIFIER@86..88: ln
ARG_LIST@88..92: (π)
EXPRESSION_LIST@88..92: (π)
IDENTIFIER@89..91: π
EXPR_STMT@94..103: sqrt(π);
CALL_EXPR@94..102: sqrt(π)
IDENTIFIER@94..98: sqrt
ARG_LIST@98..102: (π)
EXPRESSION_LIST@98..102: (π)
IDENTIFIER@99..101: π
EXPR_STMT@104..113: rotl(π);
CALL_EXPR@104..112: rotl(π)
IDENTIFIER@104..108: rotl
ARG_LIST@108..112: (π)
EXPRESSION_LIST@108..112: (π)
IDENTIFIER@109..111: π
EXPR_STMT@114..123: rotr(π);
CALL_EXPR@114..122: rotr(π)
IDENTIFIER@114..118: rotr
ARG_LIST@118..122: (π)
EXPRESSION_LIST@118..122: (π)
IDENTIFIER@119..121: π
EXPR_STMT@124..137: popcount(π);
CALL_EXPR@124..136: popcount(π)
IDENTIFIER@124..132: popcount
ARG_LIST@132..136: (π)
EXPRESSION_LIST@132..136: (π)
IDENTIFIER@133..135: π
EXPR_STMT@138..148: sizeof(x);
CALL_EXPR@138..147: sizeof(x)
IDENTIFIER@138..144: sizeof
ARG_LIST@144..147: (x)
EXPRESSION_LIST@144..147: (x)
IDENTIFIER@145..146: x
EXPR_STMT@149..162: sizeof(x, 0);
CALL_EXPR@149..161: sizeof(x, 0)
IDENTIFIER@149..155: sizeof
ARG_LIST@155..161: (x, 0)
EXPRESSION_LIST@155..161: (x, 0)
IDENTIFIER@156..157: x
LITERAL@159..160: 0
EXPR_STMT@163..176: sizeof(x, 1);
CALL_EXPR@163..175: sizeof(x, 1)
IDENTIFIER@163..169: sizeof
ARG_LIST@169..175: (x, 1)
EXPRESSION_LIST@169..175: (x, 1)
IDENTIFIER@170..171: x
LITERAL@173..174: 1
