crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__expression__built_in_call.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/expression/built_in_call.qasm
expect-sema: Panic
--- sema ---
ok: false
panicked: true
panic: programming error: expected Type::Def variant
errors: 0
--- asg ---
(no asg)
