crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__expression__order_of_ops.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/expression/order_of_ops.qasm
expect-lex: Ok
--- source ---

a[1]+2|c*(sin(y)^!3.5*d[3]);
b = bit[8](a)[2:4];
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "a" @1..2
[2] OpenBracket "[" @2..3
[3] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @3..4
[4] CloseBracket "]" @4..5
[5] Plus "+" @5..6
[6] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @6..7
[7] Or "|" @7..8
[8] Ident "c" @8..9
[9] Star "*" @9..10
[10] OpenParen "(" @10..11
[11] Ident "sin" @11..14
[12] OpenParen "(" @14..15
[13] Ident "y" @15..16
[14] CloseParen ")" @16..17
[15] Caret "^" @17..18
[16] Bang "!" @18..19
[17] Literal { kind: Float { base: Decimal, empty_exponent: false }, suffix_start: 3 } "3.5" @19..22
[18] Star "*" @22..23
[19] Ident "d" @23..24
[20] OpenBracket "[" @24..25
[21] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @25..26
[22] CloseBracket "]" @26..27
[23] CloseParen ")" @27..28
[24] Semi ";" @28..29
[25] Whitespace "\n" @29..30
[26] Ident "b" @30..31
[27] Whitespace " " @31..32
[28] Eq "=" @32..33
[29] Whitespace " " @33..34
[30] Ident "bit" @34..37
[31] OpenBracket "[" @37..38
[32] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @38..39
[33] CloseBracket "]" @39..40
[34] OpenParen "(" @40..41
[35] Ident "a" @41..42
[36] CloseParen ")" @42..43
[37] OpenBracket "[" @43..44
[38] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @44..45
[39] Colon ":" @45..46
[40] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @46..47
[41] CloseBracket "]" @47..48
[42] Semi ";" @48..49
[43] Whitespace "\n" @49..50
