crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__expression__sub_and_extern_call.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/expression/sub_and_extern_call.qasm
expect-sema: Panic
--- sema ---
ok: false
panicked: true
panic: true
errors: 0
--- asg ---
(no asg)
